--- a/cxhash.html
+++ b/cxhash.html
@@ -761,6 +761,10 @@ span.pragmawrap {
   display: none;
 }
 
+span.attachedType {
+  display: none;
+  visibility: hidden;
+}
 </style>
 
 <script type="text/javascript" src="dochack.js"></script>
@@ -812,11 +816,11 @@ function main() {
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#checkHash%2Cstring%2CT"
-    title="checkHash[T](kata: string; hsx: T)"><wbr />check<wbr />Hash<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="checkHash[T](kata: string; hsx: T)"><wbr />check<wbr />Hash<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#verifyHash%2Cstring%2CT"
-    title="verifyHash[T](kata: string; hsx: T): bool"><wbr />verify<wbr />Hash<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="verifyHash[T](kata: string; hsx: T): bool"><wbr />verify<wbr />Hash<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#createHash%2Cstring"
-    title="createHash(kata: string): auto"><wbr />create<wbr />Hash<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="createHash(kata: string): auto"><wbr />create<wbr />Hash<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -877,7 +881,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-03-15 13:43:10 UTC</small>
+        <small>Made with Nim. Generated: 2019-04-01 02:24:07 UTC</small>
       </div>
     </div>
   </div>
