--- a/cxtime.html
+++ b/cxtime.html
@@ -761,6 +761,10 @@ span.pragmawrap {
   display: none;
 }
 
+span.attachedType {
+  display: none;
+  visibility: hidden;
+}
 </style>
 
 <script type="text/javascript" src="dochack.js"></script>
@@ -813,18 +817,18 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#cxTz"
     title="cxTz = enum
-  long, short"><wbr />cx<wbr />Tz<span class="attachedType" style="visibility:hidden"></span></a></li>
+  long, short"><wbr />cx<wbr />Tz<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#CxTimer"
     title="CxTimer {.packed.} = object
   name*: string
   start*: float
   stop: float
-  lap*: seq[float]"><wbr />Cx<wbr />Timer<span class="attachedType" style="visibility:hidden"></span></a></li>
+  lap*: seq[float]"><wbr />Cx<wbr />Timer<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#Cxtimerres"
-    title="Cxtimerres = tuple[tname: string, start: float, stop: float, lap: seq[float]]"><wbr />Cxtimerres<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="Cxtimerres = tuple[tname: string, start: float, stop: float, lap: seq[float]]"><wbr />Cxtimerres<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#Cxcounter"
     title="Cxcounter = object
-  value*: int"><wbr />Cxcounter<span class="attachedType" style="visibility:hidden"></span></a></li>
+  value*: int"><wbr />Cxcounter<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -832,7 +836,7 @@ function main() {
   <a class="reference reference-toplevel" href="#8" id="58">Vars</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#cxtimerresults"
-    title="cxtimerresults = newSeq(Natural(0))"><wbr />cxtimerresults<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxtimerresults = newSeq(Natural(0))"><wbr />cxtimerresults<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -840,70 +844,70 @@ function main() {
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#cxDuration%2C%2C"
-    title="cxDuration(tstart: int | float; tend: int | float): string"><wbr />cx<wbr />Duration<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxDuration(tstart: int | float; tend: int | float): string"><wbr />cx<wbr />Duration<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxTimeZone%2CcxTz"
-    title="cxTimeZone(amode: cxTz = long): string"><wbr />cx<wbr />Time<wbr />Zone<span class="attachedType" style="visibility:hidden">cxTz</span></a></li>
+    title="cxTimeZone(amode: cxTz = long): string"><wbr />cx<wbr />Time<wbr />Zone<span class="attachedType">cxTz</span></a></li>
   <li><a class="reference" href="#toDateTime%2Cstring"
-    title="toDateTime(date: string = &quot;2000-01-01&quot;): DateTime"><wbr />to<wbr />Date<wbr />Time<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="toDateTime(date: string = &quot;2000-01-01&quot;): DateTime"><wbr />to<wbr />Date<wbr />Time<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#epochSecs%2Cstring"
-    title="epochSecs(date: string = &quot;2000-01-01&quot;): auto"><wbr />epoch<wbr />Secs<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="epochSecs(date: string = &quot;2000-01-01&quot;): auto"><wbr />epoch<wbr />Secs<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#sleepy%2CT"
-    title="sleepy[T: float | int](secs: T)"><wbr />sleepy<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="sleepy[T: float | int](secs: T)"><wbr />sleepy<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#validDate%2Cstring"
-    title="validDate(adate: string): bool"><wbr />valid<wbr />Date<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="validDate(adate: string): bool"><wbr />valid<wbr />Date<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#day%2Cstring"
-    title="day(aDate: string): string"><wbr />day<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="day(aDate: string): string"><wbr />day<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#month%2Cstring"
-    title="month(aDate: string): string"><wbr />month<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="month(aDate: string): string"><wbr />month<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#year%2Cstring"
-    title="year(aDate: string): string"><wbr />year<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="year(aDate: string): string"><wbr />year<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#compareDates%2Cstring%2Cstring"
-    title="compareDates(startDate, endDate: string): int"><wbr />compare<wbr />Dates<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="compareDates(startDate, endDate: string): int"><wbr />compare<wbr />Dates<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#plusDays%2Cstring%2Cint"
-    title="plusDays(aDate: string; days: int): string"><wbr />plus<wbr />Days<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="plusDays(aDate: string; days: int): string"><wbr />plus<wbr />Days<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#minusDays%2Cstring%2Cint"
-    title="minusDays(aDate: string; days: int): string"><wbr />minus<wbr />Days<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="minusDays(aDate: string; days: int): string"><wbr />minus<wbr />Days<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#createSeqDate%2Cstring%2Cstring"
-    title="createSeqDate(fromDate: string; toDate: string): seq[string]"><wbr />create<wbr />Seq<wbr />Date<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="createSeqDate(fromDate: string; toDate: string): seq[string]"><wbr />create<wbr />Seq<wbr />Date<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#createSeqDate%2Cstring%2Cint"
-    title="createSeqDate(fromDate: string; days: int = 1): seq[string]"><wbr />create<wbr />Seq<wbr />Date<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="createSeqDate(fromDate: string; days: int = 1): seq[string]"><wbr />create<wbr />Seq<wbr />Date<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#getRndDate%2Cint%2Cint"
     title="getRndDate(minyear: int = parseInt(year(getDateStr())) - 50;
-           maxyear: int = parseInt(year(getDateStr())) + 50): string"><wbr />get<wbr />Rnd<wbr />Date<span class="attachedType" style="visibility:hidden"></span></a></li>
+           maxyear: int = parseInt(year(getDateStr())) + 50): string"><wbr />get<wbr />Rnd<wbr />Date<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#printTimeMsg%2Cstring%2Cint"
-    title="printTimeMsg(atext: string = cxTime; xpos: int = 1): string"><wbr />print<wbr />Time<wbr />Msg<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="printTimeMsg(atext: string = cxTime; xpos: int = 1): string"><wbr />print<wbr />Time<wbr />Msg<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#printLnTimeMsg%2Cstring%2Cint"
-    title="printLnTimeMsg(atext: string = cxTime; xpos: int = 1): string"><wbr />print<wbr />Ln<wbr />Time<wbr />Msg<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="printLnTimeMsg(atext: string = cxTime; xpos: int = 1): string"><wbr />print<wbr />Ln<wbr />Time<wbr />Msg<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#printDTimeMsg%2Cstring%2Cint"
-    title="printDTimeMsg(atext: string = $toTime(now()); xpos: int = 1): string"><wbr />print<wbr />DTime<wbr />Msg<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="printDTimeMsg(atext: string = $toTime(now()); xpos: int = 1): string"><wbr />print<wbr />DTime<wbr />Msg<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#printLnDTimeMsg%2Cstring%2Cint"
-    title="printLnDTimeMsg(atext: string = $toTime(now()); xpos: int = 1): string"><wbr />print<wbr />Ln<wbr />DTime<wbr />Msg<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="printLnDTimeMsg(atext: string = $toTime(now()); xpos: int = 1): string"><wbr />print<wbr />Ln<wbr />DTime<wbr />Msg<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#printDateMsg%2Cstring%2Cint"
-    title="printDateMsg(atext: string = getDateStr(); xpos: int = 1): string"><wbr />print<wbr />Date<wbr />Msg<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="printDateMsg(atext: string = getDateStr(); xpos: int = 1): string"><wbr />print<wbr />Date<wbr />Msg<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#printLnDateMsg%2Cstring%2Cint"
-    title="printLnDateMsg(atext: string = getDateStr(); xpos: int = 1): string"><wbr />print<wbr />Ln<wbr />Date<wbr />Msg<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="printLnDateMsg(atext: string = getDateStr(); xpos: int = 1): string"><wbr />print<wbr />Ln<wbr />Date<wbr />Msg<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#newCxtimer%2Cstring"
-    title="newCxtimer(aname: string = &quot;cxtimer&quot;): ref (CxTimer)"><wbr />new<wbr />Cxtimer<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="newCxtimer(aname: string = &quot;cxtimer&quot;): ref (CxTimer)"><wbr />new<wbr />Cxtimer<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#resetTimer%2Cref."
-    title="resetTimer(co: ref (CxTimer))"><wbr />reset<wbr />Timer<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="resetTimer(co: ref (CxTimer))"><wbr />reset<wbr />Timer<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#startTimer%2Cref."
-    title="startTimer(co: ref (CxTimer))"><wbr />start<wbr />Timer<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="startTimer(co: ref (CxTimer))"><wbr />start<wbr />Timer<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#lapTimer%2Cref."
-    title="lapTimer(co: ref (CxTimer)): auto"><wbr />lap<wbr />Timer<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="lapTimer(co: ref (CxTimer)): auto"><wbr />lap<wbr />Timer<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#stopTimer%2Cref."
-    title="stopTimer(co: ref (CxTimer))"><wbr />stop<wbr />Timer<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="stopTimer(co: ref (CxTimer))"><wbr />stop<wbr />Timer<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#duration%2Cref."
-    title="duration(co: ref (CxTimer)): float"><wbr />duration<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="duration(co: ref (CxTimer)): float"><wbr />duration<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#saveTimerResults%2Cref."
-    title="saveTimerResults(b: ref (CxTimer))"><wbr />save<wbr />Timer<wbr />Results<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="saveTimerResults(b: ref (CxTimer))"><wbr />save<wbr />Timer<wbr />Results<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#showTimerResults%2Cstring"
-    title="showTimerResults(aname: string)"><wbr />show<wbr />Timer<wbr />Results<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="showTimerResults(aname: string)"><wbr />show<wbr />Timer<wbr />Results<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#showTimerResults"
-    title="showTimerResults()"><wbr />show<wbr />Timer<wbr />Results<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="showTimerResults()"><wbr />show<wbr />Timer<wbr />Results<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#clearTimerResults%2Cstring%2Cbool%2Cint"
-    title="clearTimerResults(aname: string = &quot;&quot;; quiet: bool = true; xpos: int = 3)"><wbr />clear<wbr />Timer<wbr />Results<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="clearTimerResults(aname: string = &quot;&quot;; quiet: bool = true; xpos: int = 3)"><wbr />clear<wbr />Timer<wbr />Results<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#clearAllTimerResults%2Cbool%2Cint"
-    title="clearAllTimerResults(quiet: bool = true; xpos: int = 3)"><wbr />clear<wbr />All<wbr />Timer<wbr />Results<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="clearAllTimerResults(quiet: bool = true; xpos: int = 3)"><wbr />clear<wbr />All<wbr />Timer<wbr />Results<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -911,15 +915,15 @@ function main() {
   <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#cxLocal.t"
-    title="cxLocal(): string"><wbr />cx<wbr />Local<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxLocal(): string"><wbr />cx<wbr />Local<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxNow.t"
-    title="cxNow(): string"><wbr />cx<wbr />Now<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxNow(): string"><wbr />cx<wbr />Now<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxToday.t"
-    title="cxToday(): string"><wbr />cx<wbr />Today<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxToday(): string"><wbr />cx<wbr />Today<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxTime.t"
-    title="cxTime(): string"><wbr />cx<wbr />Time<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxTime(): string"><wbr />cx<wbr />Time<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxDateTime.t"
-    title="cxDateTime(): string"><wbr />cx<wbr />Date<wbr />Time<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxDateTime(): string"><wbr />cx<wbr />Date<wbr />Time<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -976,7 +980,7 @@ function main() {
 <h1><a class="toc-backref" href="#8">Vars</a></h1>
 <dl class="item">
 <a id="cxtimerresults"></a>
-<dt><pre><span class="Identifier">cxtimerresults</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="Identifier">Natural</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span><span class="Other">)</span></pre></dt>
+<dt><pre><a href="cxtime.html#cxtimerresults"><span class="Identifier">cxtimerresults</span></a> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="Identifier">Natural</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span><span class="Other">)</span></pre></dt>
 <dd>
 
 
@@ -1339,7 +1343,7 @@ Format yyyy
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-03-15 13:43:04 UTC</small>
+        <small>Made with Nim. Generated: 2019-04-01 02:24:02 UTC</small>
       </div>
     </div>
   </div>
