--- a/cxhash.html
+++ b/cxhash.html
@@ -821,6 +821,8 @@ function main() {
     title="verifyHash[T](kata: string; hsx: T): bool"><wbr />verify<wbr />Hash<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#createHash%2Cstring"
     title="createHash(kata: string): auto"><wbr />create<wbr />Hash<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#getGitHash"
+    title="getGitHash(): string"><wbr />get<wbr />Git<wbr />Hash<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -832,7 +834,7 @@ function main() {
   <div id="tocRoot"></div>
   <p class="module-desc"><p>cxhashes.nim</p>
 <p>convenience functions for hashes</p>
-<p>Last 2018-02-27 </p>
+<p>Last 2019-04-05 </p>
 </p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
@@ -871,6 +873,12 @@ function main() {
 <span class="Identifier">checkHash</span><span class="Punctuation">(</span><span class="Identifier">zz</span><span class="Punctuation">,</span> <span class="Identifier">ahash</span><span class="Punctuation">)</span></pre>
 
 </dd>
+<a id="getGitHash"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#getGitHash"><span class="Identifier">getGitHash</span></a><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+getGitHash to get the git hash during compile 
+
+</dd>
 
 </dl></div>
 
@@ -881,7 +889,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-04-01 02:24:07 UTC</small>
+        <small>Made with Nim. Generated: 2019-04-05 14:30:24 UTC</small>
       </div>
     </div>
   </div>
