--- a/cxglobal.html
+++ b/cxglobal.html
@@ -914,10 +914,10 @@ function main() {
     title="createSeqInt(n: int = 10; mi: int = 0; ma: int = 1000): seq[int]"><wbr />create<wbr />Seq<wbr />Int<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#ff%2Cfloat%2Cint"
     title="ff(zz: float; n: int = 5): string"><wbr />ff<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#ff22%2Cint%2Cint"
-    title="ff22(zz: int; n: int = 0): string"><wbr />ff22<span class="attachedType"></span></a></li>
-  <li><a class="reference" href="#ff2%2C%2Cint"
-    title="ff2(zz: float | int; n: int = 3): string"><wbr />ff2<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#ff22%2Cint"
+    title="ff22(zz: int): string"><wbr />ff22<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#ff2%2Cfloat%2Cint"
+    title="ff2(zz: float; n: int = 3): string"><wbr />ff2<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#getRandomFloat%2Cfloat%2Cfloat"
     title="getRandomFloat(mi: float = -1.0; ma: float = 1.0): float"><wbr />get<wbr />Random<wbr />Float<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#getRndFloat%2Cfloat%2Cfloat"
@@ -1392,13 +1392,13 @@ getRndInt
 
 
 </dd>
-<a id="ff22,int,int"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#ff22%2Cint%2Cint"><span class="Identifier">ff22</span></a><span class="Other">(</span><span class="Identifier">zz</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="ff22,int"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#ff22%2Cint"><span class="Identifier">ff22</span></a><span class="Other">(</span><span class="Identifier">zz</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>ff22</p>
 <p>formats a integer into form 12,345,678 with thousands separators shown</p>
-<p>precision is after comma given by n with default set to 0 in context of integer this means display format could even show a 0 after comma part if needed</p>
-<p>ff2i(12345,0)  ==&gt; 12,345     # display an integer with thousands seperator as we know it ff2i(12345,1)  ==&gt; 12,345.0   # display an integer but like a float with 1 after comma pos ff2i(12345,2)  ==&gt; 12,345.00  # display an integer but like a float with 2 after comma pos</p>
+<p>to format an integer with decimals use ff2(float(myint))</p>
+<p>ff2(12345,0)  ==&gt; 12,345     # display an integer with thousands seperator as we know it ff2(12345,1)  ==&gt; 12,345.0   # display an integer but like a float with 1 after comma pos ff2(12345,2)  ==&gt; 12,345.00  # display an integer but like a float with 2 after comma pos</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 
 <span class="Comment"># int example</span>
@@ -1408,11 +1408,11 @@ getRndInt
    <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="Identifier">fmtx</span><span class="Punctuation">(</span><span class="Punctuation">[</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&gt;6&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;&gt;20.0&quot;</span><span class="Punctuation">]</span><span class="Punctuation">,</span><span class="StringLit">&quot;NIM &quot;</span><span class="Punctuation">,</span><span class="Operator">$</span><span class="Identifier">x</span><span class="Punctuation">,</span><span class="StringLit">&quot; : &quot;</span><span class="Punctuation">,</span><span class="Identifier">z</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<a id="ff2,,int"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#ff2%2C%2Cint"><span class="Identifier">ff2</span></a><span class="Other">(</span><span class="Identifier">zz</span><span class="Other">:</span> <span class="Identifier">float</span> <span class="Operator">|</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">3</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<a id="ff2,float,int"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#ff2%2Cfloat%2Cint"><span class="Identifier">ff2</span></a><span class="Other">(</span><span class="Identifier">zz</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">;</span> <span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">3</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>ff2</p>
-<p>formats a float to string 12,345,678.234 that is thousands separators are shown formats a int   to string 12,345,678.000 that is thousands separators are shown and desired decimals n as 0 for integers the minimum decimals will be xxx.0 if not required just split it off or use ff22</p>
+<p>formats a float to string 12,345,678.234 that is thousands separators are shown formats a int   to string 12,345,678.000 that is thousands separators are shown and desired decimals n as 0</p>
 <p>precision is after comma given by n with default set to 3</p>
 <pre class="listing"><span class="Keyword">import</span> <span class="Identifier">nimcx</span>
 
@@ -2129,7 +2129,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2019-04-08 13:18:04 UTC</small>
+        <small>Made with Nim. Generated: 2019-04-08 14:14:32 UTC</small>
       </div>
     </div>
   </div>
